<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/selectLocationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/submitLocationButton"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/select"
            />
        <!--TODODONE: Add the map fragment for the user to select the location-->
        <fragment
            android:id="@+id/mapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            app:layout_constraintTop_toBottomOf="@+id/submitLocationButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
