...
            android:id="@+id/reminderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/reminderDisplayedTitle"
                android:padding="1dp"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                android:text="@{item.title}"
...
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/reminderDisplayedDescription"
                android:padding="1dp"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
                android:textSize="@dimen/text_size_small"
...
